[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://SCRIPT/PLAYER.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="PLAYER" type="KinematicBody2D" groups=["PLAYER"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Quest_Bubble" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -190.5
margin_right = 190.5
margin_bottom = 130.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Quest_Bubble"]
modulate = Color( 0.996078, 0.815686, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 3.0
margin_right = 20.0
margin_bottom = 17.0
text = "QUEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestTarget" type="Label" parent="CanvasLayer/Quest_Bubble"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 108.0
margin_right = -66.0
margin_bottom = 122.0
text = "QUEST TARGET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestID" type="Label" parent="CanvasLayer/Quest_Bubble"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.5
margin_top = 24.0
margin_right = 179.5
margin_bottom = 39.0
text = "QUEST NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestOBJ" type="Label" parent="CanvasLayer/Quest_Bubble"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -177.5
margin_top = 47.0
margin_right = 185.5
margin_bottom = 82.0
text = "THIS IS A PLACEHOLDER FOR THE QUEST OBJECTIVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="CanvasLayer/Quest_Bubble"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 97.0
margin_top = 108.0
margin_right = 163.0
margin_bottom = 122.0
text = "PROGRESS"
__meta__ = {
"_edit_use_anchors_": false
}
